TD-1479 RiC - Add additional datafile as a property

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -27,6 +27,7 @@ RUNNING_TESTS=Running tests
 UPLOADING_NEW_APPLICATION_S=Uploading new application file %s
 APPLICATION_S_NOT_CHANGED_NOT_UPLOADING=Application file %s does not differ from latest version in cloud - not uploading
 UPLOADING_NEW_INSTRUMENTATION_S=Uploading new instrumentation file %s
+UPLOADING_DATA_FILE_S=Uploading data file %s
 INSTRUMENTATION_S_NOT_CHANGED_NOT_UPLOADING=Instrumentation file %s does not differ from latest version in cloud - not uploading
 COLUMN_SUCCESS_RATE = Testdroid Cloud (success rate)
 SUCCESS_RATE = Success rate
