TD-1934 - Fetch only the valid test results to workspace

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -54,6 +54,6 @@ DOWNLOAD_RESULTS_FAILED=Problem occurred during download results from cloud back
 DOWNLOAD_RESULTS_FAILED_WITH_REASON_S=Problem occurred during download results from cloud back: %s
 DOWNLOAD_RESULTS_FROM_DEVICE_FAILED_S=Error during get result from %s
 DOWNLOAD_SCREENSHOT_FROM_DEVICE_FAILED_S_S=Error during get screenshot(%s) from %s
-NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s. Test was not launched because of internal error. Please look in Testdroid Cloud Admin pages to see what happened.
+NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s. Test was not launched.
 CHECK_FOR_TESTRUN_STATE="Check for testRun({0}) state."
 API_GET_TESTRUN_ERROR="Error during get testRun({0}) by api."
