--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 1.0.7
 =====
 * Handle NumberFormatException, when Device group is not chosen
+* Test timeout support
+* API library updated to 2.3 version
 
 1.0.6
 =====
