--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -58,3 +58,4 @@ NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s
 CHECK_FOR_TESTRUN_STATE="Check for testRun({0}) state."
 API_GET_TESTRUN_ERROR="Error during get testRun({0}) by api."
 NO_DEVICE_GROUP_CHOSEN=You have to set device group before run in cloud.
+TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: %s.
