--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -23,6 +23,7 @@ SCHEDULER_SERIAL=Run on one device at a time
 SCHEDULER_SINGLE=Run only on one device from group
 APP_CRAWLER=App Crawler
 PRICE=Price
+TIMEOUT=Timeout
 RUNNING_TESTS=Running tests
 UPLOADING_NEW_APPLICATION_S=Uploading new application file %s
 APPLICATION_S_NOT_CHANGED_NOT_UPLOADING=Application file %s does not differ from latest version in cloud - not uploading
