--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.8
+=====
+* Fix for checking "Finish test in Testdroid Cloud after 'Timeout for results’"
+
 1.0.7
 =====
 * Handle NumberFormatException, when Device group is not chosen
