--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -26,10 +26,10 @@ PRICE=Price
 TIMEOUT=Timeout
 RUNNING_TESTS=Running tests
 UPLOADING_NEW_APPLICATION_S=Uploading new application file %s
-APPLICATION_S_NOT_CHANGED_NOT_UPLOADING=Application file %s does not differ from latest version in cloud - not uploading
+APPLICATION_S_NOT_CHANGED_NOT_UPLOADING=Application file %s does not differ from latest version in Cloud - not uploading
 UPLOADING_NEW_INSTRUMENTATION_S=Uploading new instrumentation file %s
 UPLOADING_DATA_FILE_S=Uploading data file %s
-INSTRUMENTATION_S_NOT_CHANGED_NOT_UPLOADING=Instrumentation file %s does not differ from latest version in cloud - not uploading
+INSTRUMENTATION_S_NOT_CHANGED_NOT_UPLOADING=Instrumentation file %s does not differ from latest version in Cloud - not uploading
 COLUMN_SUCCESS_RATE = Testdroid Cloud (success rate)
 SUCCESS_RATE = Success rate
 SUCCESS_RATE_TIP = Succeeded and failed tests on devices
@@ -51,12 +51,12 @@ ON_FAILURE_ONLY=On failure only
 RUN_TEST_IN_CLOUD_FAILED=Run test in Testdroid Cloud failed
 RUN_TEST_IN_CLOUD_SUCCEEDED=Run test in Testdroid Cloud succeeded
 RUN_TEST_IN_CLOUD_STARTED=Run test in Testdroid Cloud process started...
-DOWNLOAD_RESULTS_FAILED=Problem occurred during download results from cloud back.
-DOWNLOAD_RESULTS_FAILED_WITH_REASON_S=Problem occurred during download results from cloud back: %s
+DOWNLOAD_RESULTS_FAILED=Problem occurred during download results from Cloud back.
+DOWNLOAD_RESULTS_FAILED_WITH_REASON_S=Problem occurred during download results from Cloud back: %s
 DOWNLOAD_RESULTS_FROM_DEVICE_FAILED_S=Error during get result from %s
 DOWNLOAD_SCREENSHOT_FROM_DEVICE_FAILED_S_S=Error during get screenshot(%s) from %s
 NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s. Test was not launched.
 CHECK_FOR_TESTRUN_STATE="Check for testRun({0}) state."
 API_GET_TESTRUN_ERROR="Error during get testRun({0}) by api."
-NO_DEVICE_GROUP_CHOSEN=You have to set device group before run in cloud.
+NO_DEVICE_GROUP_CHOSEN=You have to set device group before run in Cloud.
 TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: %s.
