Jenkins Testdroid Run in Cloud Plugin - Error during get result

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -53,8 +53,7 @@ RUN_TEST_IN_CLOUD_SUCCEEDED=Run test in Testdroid Cloud succeeded
 RUN_TEST_IN_CLOUD_STARTED=Run test in Testdroid Cloud process started...
 DOWNLOAD_RESULTS_FAILED=Problem occurred during download results from Cloud back.
 DOWNLOAD_RESULTS_FAILED_WITH_REASON_S=Problem occurred during download results from Cloud back: %s
-DOWNLOAD_RESULTS_FROM_DEVICE_FAILED_S=Error during get result from %s
-DOWNLOAD_SCREENSHOT_FROM_DEVICE_FAILED_S_S=Error during get screenshot(%s) from %s
+ERROR_DURING_DOWNLOAD_S_FROM_S=Error during download %s from %s
 NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s. Test was not launched.
 CHECK_FOR_TESTRUN_STATE="Check for testRun({0}) state."
 API_GET_TESTRUN_ERROR="Error during get testRun({0}) by api."
