Jenkins Testdroid Run in Cloud Plugin - Error during get result

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+1.0.16
+======
+* Updated repository url
+* Getting results - less error-prone
+
+1.0.15
+======
+* Updated wiki location
+
 1.0.14
 ======
 * Fixed wrong tips for AppCrawler
