--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -1,5 +1,5 @@
-PLUGIN_NAME=Testdroid Plugin for CI
-TESTDROID_RUN_TESTS_IN_CLOUD=Testdroid: Run tests in Testdroid Cloud
+PLUGIN_NAME=Bitbar Run-in-Cloud Plugin
+TESTDROID_RUN_TESTS_IN_CLOUD=Bitbar: Run tests in Bitbar Cloud
 ERROR_APP_PATH=Empty application path
 ERROR_INSTRUMENTATION_PATH=Empty instrumentation path
 EMPTY_PROJECT=Empty project name
@@ -7,10 +7,10 @@ CHECK_PROJECT_NAME=Please check project name
 UPLOADING_APPLICATION=Uploading application file
 UPLOADING_INSTRUMENTATION=Uploading instrumentation file
 ERROR_AUTHORIZATION=Authorization error. Please check email and password
-ERROR_API=Problem with Testdroid API. Please check email and password or contact support@bitbar.com
+ERROR_API=Problem with the Bitbar API. Please check email and password or contact support@bitbar.com
 ERROR_FILE_NOT_FOUND=File not found
 ERROR_CONNECTION=Connection error
-ERROR_TESTDROID=Testdroid error
+ERROR_TESTDROID=Bitbar Cloud error
 ERROR_GET_CLUSTER=Failed getting device clusters
 AUTHORIZATION_OK=Authorization ok.
 UNLIMITED=unlimited
@@ -30,17 +30,17 @@ APPLICATION_S_NOT_CHANGED_NOT_UPLOADING=Application file %s does not differ from
 UPLOADING_NEW_INSTRUMENTATION_S=Uploading new instrumentation file %s
 UPLOADING_DATA_FILE_S=Uploading data file %s
 INSTRUMENTATION_S_NOT_CHANGED_NOT_UPLOADING=Instrumentation file %s does not differ from latest version in Cloud - not uploading
-COLUMN_SUCCESS_RATE = Testdroid Cloud (success rate)
+COLUMN_SUCCESS_RATE = Bitbar Cloud (success rate)
 SUCCESS_RATE = Success rate
 SUCCESS_RATE_TIP = Succeeded and failed tests on devices
 SUCCESS_RATE_PROGRESS_TIP = Test run finished without error on %d'%' of devices
 SUCCESS_RATE_ERROR = Not available
 SUCCESS_RATE_DESCRIPTION = Successful: %d; Failed: %d
-COLUMN_STATUS = Testdroid Cloud (status)
+COLUMN_STATUS = Bitbar Cloud (status)
 STATUS = Status
 STATUS_TIP = Current test run status
 STATUS_ERROR = Not available
-COLUMN_PROGRESS = Testdroid Cloud (finished progress)
+COLUMN_PROGRESS = Bitbar Cloud (finished progress)
 PROGRESS = Progress
 PROGRESS_TIP = Percentage of finished devices
 PROGRESS_DESCRIPTION = WAITING: %d / RUNNING: %d / FINISHED: %d / NUMBER OF DEVICES: %d
@@ -48,14 +48,14 @@ PROGRESS_PROGRESS_TIP = %d'%' of devices have finished
 PROGRESS_ERROR = Not available
 ALWAYS=Always
 ON_FAILURE_ONLY=On failure only
-RUN_TEST_IN_CLOUD_FAILED=Run test in Testdroid Cloud failed
-RUN_TEST_IN_CLOUD_SUCCEEDED=Run test in Testdroid Cloud succeeded
-RUN_TEST_IN_CLOUD_STARTED=Run test in Testdroid Cloud process started...
-DOWNLOAD_RESULTS_FAILED=Problem occurred during download results from Cloud back.
-DOWNLOAD_RESULTS_FAILED_WITH_REASON_S=Problem occurred during download results from Cloud back: %s
-ERROR_DURING_DOWNLOAD_S_FROM_S=Error during download %s from %s
+RUN_TEST_IN_CLOUD_FAILED=Run test in Bitbar Cloud failed
+RUN_TEST_IN_CLOUD_SUCCEEDED=Run test in Bitbar Cloud succeeded
+RUN_TEST_IN_CLOUD_STARTED=Run test in Bitbar Cloud process started...
+DOWNLOAD_RESULTS_FAILED=A problem occurred downloading results from Cloud
+DOWNLOAD_RESULTS_FAILED_WITH_REASON_S=A problem occurred downloading results from Cloud: %s
+ERROR_DURING_DOWNLOAD_S_FROM_S=Error downloading %s from %s
 NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s. Test was not launched.
 CHECK_FOR_TESTRUN_STATE="Check for testRun({0}) state."
 API_GET_TESTRUN_ERROR="Error during get testRun({0}) by api."
-NO_DEVICE_GROUP_CHOSEN=You have to set device group before run in Cloud.
+NO_DEVICE_GROUP_CHOSEN=You have to set device group before running in the Cloud.
 TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: %s. Setting 10 minutes.
