Allow user to leave out app path and use latest app to run tests

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -15,6 +15,8 @@ ERROR_GET_CLUSTER=Failed getting device clusters
 AUTHORIZATION_OK=Authorization ok.
 UNLIMITED=unlimited
 TEST_RUN_CONFIGURATION=Using test run configuration:
+CLOUD_URL=Bitbar Cloud URL
+USER_EMAIL=Username (email)
 PROJECT=Project
 LOCALE=Locale
 SCHEDULER=Scheduler
@@ -59,3 +61,4 @@ CHECK_FOR_TESTRUN_STATE="Check for testRun({0}) state."
 API_GET_TESTRUN_ERROR="Error during get testRun({0}) by api."
 NO_DEVICE_GROUP_CHOSEN=You have to set device group before running in the Cloud.
 TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: %s. Setting 10 minutes.
+FREE_USERS_MAX_10_MINS=User %s is a free user. Forcing timeout 10 minutes!
