Migrate of APINotificationEmail.Type to APINotificationScope

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -50,6 +50,7 @@ PROGRESS_PROGRESS_TIP = %d'%' of devices have finished
 PROGRESS_ERROR = Not available
 ALWAYS=Always
 ON_FAILURE_ONLY=On failure only
+ON_SUCCESS_ONLY=On success only
 RUN_TEST_IN_CLOUD_FAILED=Run test in Bitbar Cloud failed
 RUN_TEST_IN_CLOUD_SUCCEEDED=Run test in Bitbar Cloud succeeded
 RUN_TEST_IN_CLOUD_STARTED=Run test in Bitbar Cloud process started...
