Get reason of failure of file upload from Exception

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -8,7 +8,7 @@ UPLOADING_APPLICATION=Uploading application file
 UPLOADING_INSTRUMENTATION=Uploading instrumentation file
 ERROR_AUTHORIZATION=Authorization error. Please check email and password
 ERROR_API=Problem with the Bitbar API. Please check email and password or contact support@bitbar.com
-ERROR_FILE_NOT_FOUND=File not found
+ERROR_FILE_NOT_FOUND=File not found {0}
 ERROR_CONNECTION=Connection error
 ERROR_TESTDROID=Bitbar Cloud error
 ERROR_GET_CLUSTER=Failed getting device clusters
@@ -28,6 +28,7 @@ PRICE=Price
 TIMEOUT=Timeout
 RUNNING_TESTS=Running tests
 UPLOADING_NEW_APPLICATION_S=Uploading new application file %s
+UPLOADING_FILE_ERROR=Cannot upload file {0} {1}
 APPLICATION_S_NOT_CHANGED_NOT_UPLOADING=Application file %s does not differ from latest version in Cloud - not uploading
 UPLOADING_NEW_INSTRUMENTATION_S=Uploading new instrumentation file %s
 UPLOADING_DATA_FILE_S=Uploading data file %s
