--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -3,6 +3,8 @@ TESTDROID_RUN_TESTS_IN_CLOUD=Bitbar: Run tests in Bitbar Cloud
 ERROR_APP_PATH=Empty application path
 ERROR_INSTRUMENTATION_PATH=Empty instrumentation path
 EMPTY_PROJECT=Empty project name
+DEFINE_OS_TYPE=Please define OS Type
+DEFINE_FRAMEWORK=Please define Framework
 CHECK_PROJECT_NAME=Please check project name
 UPLOADING_APPLICATION=Uploading application file
 UPLOADING_INSTRUMENTATION=Uploading instrumentation file
@@ -18,6 +20,8 @@ TEST_RUN_CONFIGURATION=Using test run configuration:
 CLOUD_URL=Bitbar Cloud URL
 USER_EMAIL=Username (email)
 PROJECT=Project
+FRAMEWORK_ID_VALUE=Framework: {0}
+OS_TYPE_VALUE=OsType: {0}
 LOCALE=Locale
 SCHEDULER=Scheduler
 SCHEDULER_PARALLEL=Run on all devices simultaneously
@@ -62,7 +66,7 @@ NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s
 CHECK_FOR_TESTRUN_STATE="Check for testRun({0,number,#}) state."
 API_GET_TESTRUN_ERROR="Error during get testRun({0,number,#}) by api."
 NO_DEVICE_GROUP_CHOSEN=You have to set device group before running in the Cloud.
-TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: %s. Setting 10 minutes.
+TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: {0}. Setting 10 minutes.
 FREE_USERS_MAX_10_MINS=User %s is a free user. Forcing timeout 10 minutes!
 BUILD_STEP_USING_CREDENTIALS=Using login details from the credentials manager, which overrides basic username/password specified in settings.
 COULDNT_FIND_CREDENTIALS=Couldn't find the credentials '%s'
