--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -64,7 +64,7 @@ DOWNLOAD_RESULTS_FAILED_WITH_REASON_S=A problem occurred downloading results fro
 ERROR_DURING_DOWNLOAD_S_FROM_S=Error downloading %s from %s
 NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s. Test was not launched.
 CHECK_FOR_TESTRUN_STATE="Check for testRun({0,number,#}) state."
-API_GET_TESTRUN_ERROR="Error during get testRun({0,number,#}) by api."
+API_GET_TESTRUN_ERROR="Error during get testRun({0,number,#}) by api. {1}"
 NO_DEVICE_GROUP_CHOSEN=You have to set device group before running in the Cloud.
 TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: {0}. Setting 10 minutes.
 FREE_USERS_MAX_10_MINS=User %s is a free user. Forcing timeout 10 minutes!
