--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -67,9 +67,12 @@ CHECK_FOR_TESTRUN_STATE="Check for testRun({0,number,#}) state."
 API_GET_TESTRUN_ERROR="Error during get testRun({0,number,#}) by api. {1}"
 NO_DEVICE_GROUP_CHOSEN=You have to set device group before running in the Cloud.
 TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: {0}. Setting 10 minutes.
+TESTRUN_STATE="TestRun({0,number,#}) state is {1}."
 FREE_USERS_MAX_10_MINS=User %s is a free user. Forcing timeout 10 minutes!
 BUILD_STEP_USING_CREDENTIALS=Using login details from the credentials manager, which overrides basic username/password specified in settings.
 COULDNT_FIND_CREDENTIALS=Couldn't find the credentials '%s'
 CLOUD_URL_SET_BUT_NO_CREDENTIALS=Cloud URL '%s' was specified but no credentials. Using default URL '%s'
 RECEIVED_REST_JSON=%s received a REST request to the JSON endpoint.
 REQUEST_NEEDS_TESTRUNID=%s: the request did not contain the parameter 'testRunId'. Ignoring.
+WAITING_FOR_THE_RESULTS=Waiting for the results...
+WAITING_SEC_FOR_THE_RESULTS=Waiting({0,number,#} seconds) for results...
