Make projectId optional, not load readOnly projects

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -2,7 +2,6 @@ PLUGIN_NAME=Bitbar Run-in-Cloud Plugin
 TESTDROID_RUN_TESTS_IN_CLOUD=Bitbar: Run tests in Bitbar Cloud
 ERROR_APP_PATH=Empty application path
 ERROR_INSTRUMENTATION_PATH=Empty instrumentation path
-EMPTY_PROJECT=Empty project name
 DEFINE_OS_TYPE=Please define OS Type
 DEFINE_FRAMEWORK=Please define Framework
 CHECK_PROJECT_NAME=Please check project name
@@ -17,19 +16,19 @@ ERROR_GET_CLUSTER=Failed getting device clusters
 AUTHORIZATION_OK=Authorization ok.
 UNLIMITED=unlimited
 TEST_RUN_CONFIGURATION=Using test run configuration:
-CLOUD_URL=Bitbar Cloud URL
-USER_EMAIL=Username (email)
-PROJECT=Project
-FRAMEWORK_ID_VALUE=Framework: {0}
+CLOUD_INFO=Bitbar Cloud URL: {0} Version: {1}
+USER_EMAIL_VALUE=Username(email): {0}
+PROJECT_INFO=Project Name: {0} ID: {1,number,#}   
+FRAMEWORK_INFO=Framework ID: {0}
 OS_TYPE_VALUE=OsType: {0}
-LOCALE=Locale
-SCHEDULER=Scheduler
+LOCALE_VALUE=Locale: {0}
+SCHEDULER_VALUE=Scheduler: {0}
 SCHEDULER_PARALLEL=Run on all devices simultaneously
 SCHEDULER_SERIAL=Run on one device at a time
 SCHEDULER_SINGLE=Run only on one device from group
 APP_CRAWLER=App Crawler
 PRICE=Price
-TIMEOUT=Timeout
+TIMEOUT_VALUE=Timeout: {0}
 RUNNING_TESTS=Running tests
 UPLOADING_NEW_APPLICATION_S=Uploading new application file %s
 UPLOADING_FILE_ERROR=Cannot upload file {0} {1}
@@ -65,7 +64,7 @@ ERROR_DURING_DOWNLOAD_S_FROM_S=Error downloading %s from %s
 NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s. Test was not launched.
 CHECK_FOR_TESTRUN_STATE="Check for testRun({0,number,#}) state."
 API_GET_TESTRUN_ERROR="Error during get testRun({0,number,#}) by api. {1}"
-NO_DEVICE_GROUP_CHOSEN=You have to set device group before running in the Cloud.
+DEVICE_GROUP_INFO=Device Group Name: {0} ID: {1,number,#}
 TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: {0}. Setting 10 minutes.
 TESTRUN_STATE="TestRun({0,number,#}) state is {1}."
 FREE_USERS_MAX_10_MINS=User %s is a free user. Forcing timeout 10 minutes!
