Fix for Backend change in Roles

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -67,7 +67,7 @@ API_GET_TESTRUN_ERROR="Error during get testRun({0,number,#}) by api. {1}"
 DEVICE_GROUP_INFO=Device Group Name: {0} ID: {1,number,#}
 TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: {0}. Setting 10 minutes.
 TESTRUN_STATE="TestRun({0,number,#}) state is {1}."
-FREE_USERS_MAX_10_MINS=User %s is a free user. Forcing timeout 10 minutes!
+FREE_USERS_CLOUD_TIMEOUT=User %s is a free user. Forcing timeout from Cloud!
 BUILD_STEP_USING_CREDENTIALS=Using login details from the credentials manager, which overrides basic username/password specified in settings.
 COULDNT_FIND_CREDENTIALS=Couldn't find the credentials '%s'
 CLOUD_URL_SET_BUT_NO_CREDENTIALS=Cloud URL '%s' was specified but no credentials. Using default URL '%s'
