Fix formating of testTimeout and frameworkId

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -19,7 +19,7 @@ TEST_RUN_CONFIGURATION=Using test run configuration:
 CLOUD_INFO=Bitbar Cloud URL: {0} Version: {1}
 USER_EMAIL_VALUE=Username(email): {0}
 PROJECT_INFO=Project Name: {0} ID: {1,number,#}   
-FRAMEWORK_INFO=Framework ID: {0}
+FRAMEWORK_INFO=Framework ID: {0,number,#}
 OS_TYPE_VALUE=OsType: {0}
 LOCALE_VALUE=Locale: {0}
 SCHEDULER_VALUE=Scheduler: {0}
@@ -28,7 +28,7 @@ SCHEDULER_SERIAL=Run on one device at a time
 SCHEDULER_SINGLE=Run only on one device from group
 APP_CRAWLER=App Crawler
 PRICE=Price
-TIMEOUT_VALUE=Timeout: {0}
+TIMEOUT_VALUE=Timeout: {0,number,#}
 RUNNING_TESTS=Running tests
 UPLOADING_NEW_APPLICATION_S=Uploading new application file %s
 UPLOADING_FILE_ERROR=Cannot upload file {0} {1}
