--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -15,7 +15,6 @@ ERROR_TESTDROID=Bitbar Cloud error
 ERROR_GET_CLUSTER=Failed getting device clusters
 AUTHORIZATION_OK=Authorization ok.
 UNLIMITED=unlimited
-TEST_RUN_CONFIGURATION=Using test run configuration:
 CLOUD_INFO=Bitbar Cloud URL: {0} Version: {1}
 USER_EMAIL_VALUE=Username(email): {0}
 PROJECT_INFO=Project Name: {0} ID: {1,number,#}   
@@ -62,11 +61,13 @@ DOWNLOAD_RESULTS_FAILED=A problem occurred downloading results from Cloud
 DOWNLOAD_RESULTS_FAILED_WITH_REASON_S=A problem occurred downloading results from Cloud: %s
 ERROR_DURING_DOWNLOAD_S_FROM_S=Error downloading %s from %s
 NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s. Test was not launched.
-CHECK_FOR_TESTRUN_STATE="Check for testRun({0,number,#}) state."
-API_GET_TESTRUN_ERROR="Error during get testRun({0,number,#}) by api. {1}"
+CHECK_FOR_TESTRUN_STATE=Check for testRun({0,number,#}) state.
+API_GET_TESTRUN_ERROR=Error during get testRun({0,number,#}) by api. {1}
 DEVICE_GROUP_INFO=Device Group Name: {0} ID: {1,number,#}
 TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: {0}. Setting 10 minutes.
-TESTRUN_STATE="TestRun({0,number,#}) state is {1}."
+TEST_RUN_CONFIGURATION=Using test run configuration:
+TEST_RUN_INFO=Started new Bitbar Cloud run at: {0} (ID: {1,number,#})
+TEST_RUN_STATE=TestRun({0,number,#}) state is {1}.
 FREE_USERS_CLOUD_TIMEOUT=User %s is a free user. Forcing timeout from Cloud!
 BUILD_STEP_USING_CREDENTIALS=Using login details from the credentials manager, which overrides basic username/password specified in settings.
 COULDNT_FIND_CREDENTIALS=Couldn't find the credentials '%s'
