--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -74,5 +74,6 @@ COULDNT_FIND_CREDENTIALS=Couldn't find the credentials '%s'
 CLOUD_URL_SET_BUT_NO_CREDENTIALS=Cloud URL '%s' was specified but no credentials. Using default URL '%s'
 RECEIVED_REST_JSON=%s received a REST request to the JSON endpoint.
 REQUEST_NEEDS_TESTRUNID=%s: the request did not contain the parameter 'testRunId'. Ignoring.
+WAITING_FOR_VIRUS_SCAN=Waiting for uploaded files to be scanned
 WAITING_FOR_THE_RESULTS=Waiting for the results...
 WAITING_SEC_FOR_THE_RESULTS=Waiting({0,number,#} seconds) for results...
