Change authorization to API key

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -1,79 +1,80 @@
-PLUGIN_NAME=Bitbar Run-in-Cloud Plugin
-TESTDROID_RUN_TESTS_IN_CLOUD=Bitbar: Run tests in Bitbar Cloud
-ERROR_APP_PATH=Empty application path
-ERROR_INSTRUMENTATION_PATH=Empty instrumentation path
-DEFINE_OS_TYPE=Please define OS Type
-DEFINE_FRAMEWORK=Please define Framework
-CHECK_PROJECT_NAME=Please check project name
-UPLOADING_APPLICATION=Uploading application file
-UPLOADING_INSTRUMENTATION=Uploading instrumentation file
-ERROR_AUTHORIZATION=Authorization error. Please check email and password
-ERROR_API=Problem with the Bitbar API. Please check email and password or contact support@bitbar.com
-ERROR_FILE_NOT_FOUND=File not found {0}
-ERROR_CONNECTION=Connection error
-ERROR_TESTDROID=Bitbar Cloud error
-ERROR_GET_CLUSTER=Failed getting device clusters
+ALWAYS=Always
+API_GET_TESTRUN_ERROR=Error during get testRun({0,number,#}) by api. {1}
+APP_CRAWLER=App Crawler
+APPLICATION_S_NOT_CHANGED_NOT_UPLOADING=Application file %s does not differ from latest version in Cloud - not uploading
 AUTHORIZATION_OK=Authorization ok.
-UNLIMITED=unlimited
+BITBAR_API_KEY=BitBar API key
+BUILD_STEP_USING_CREDENTIALS=Using login details from the credentials manager, which overrides basic username/password specified in settings.
+CHECK_FOR_TESTRUN_STATE=Check for testRun({0,number,#}) state.
+CHECK_PROJECT_NAME=Please check project name
 CLOUD_INFO=Bitbar Cloud URL: {0} Version: {1}
-USER_EMAIL_VALUE=Username(email): {0}
-PROJECT_INFO=Project Name: {0} ID: {1,number,#}   
+CLOUD_URL_SET_BUT_NO_CREDENTIALS=Cloud URL '%s' was specified but no credentials. Using default URL '%s'
+COLUMN_PROGRESS=Bitbar Cloud (finished progress)
+COLUMN_STATUS=Bitbar Cloud (status)
+COLUMN_SUCCESS_RATE=Bitbar Cloud (success rate)
+COULDNT_FIND_CREDENTIALS=Couldn't find the credentials '%s'
+DEFINE_FRAMEWORK=Please define Framework
+DEFINE_OS_TYPE=Please define OS Type
+DEVICE_GROUP_INFO=Device Group Name: {0} ID: {1,number,#}
+DOWNLOAD_RESULTS_FAILED=A problem occurred downloading results from Cloud
+DOWNLOAD_RESULTS_FAILED_WITH_REASON_S=A problem occurred downloading results from Cloud: %s
+ERROR_API=Problem with the Bitbar API. Please check credentials or contact support@bitbar.com
+ERROR_APP_PATH=Empty application path
+ERROR_AUTHORIZATION=Authorization error. Please check credentials
+ERROR_CONNECTION=Connection error
+ERROR_DURING_DOWNLOAD_S_FROM_S=Error downloading %s from %s
+ERROR_FILE_NOT_FOUND=File not found {0}
+ERROR_GET_CLUSTER=Failed getting device clusters
+ERROR_INSTRUMENTATION_PATH=Empty instrumentation path
+ERROR_TESTDROID=Bitbar Cloud error
 FRAMEWORK_INFO=Framework ID: {0,number,#}
-OS_TYPE_VALUE=OsType: {0}
+FREE_USERS_CLOUD_TIMEOUT=User %s is a free user. Forcing timeout from Cloud!
+INSTRUMENTATION_S_NOT_CHANGED_NOT_UPLOADING=Instrumentation file %s does not differ from latest version in Cloud - not uploading
 LOCALE_VALUE=Locale: {0}
-SCHEDULER_VALUE=Scheduler: {0}
+NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s. Test was not launched.
+ON_FAILURE_ONLY=On failure only
+ON_SUCCESS_ONLY=On success only
+OS_TYPE_VALUE=OsType: {0}
+PLUGIN_NAME=Bitbar Run-in-Cloud Plugin
+PRICE=Price
+PROGRESS_DESCRIPTION=WAITING: %d / RUNNING: %d / FINISHED: %d / NUMBER OF DEVICES: %d
+PROGRESS_ERROR=Not available
+PROGRESS=Progress
+PROGRESS_PROGRESS_TIP=%d'%' of devices have finished
+PROGRESS_TIP=Percentage of finished devices
+PROJECT_INFO=Project Name: {0} ID: {1,number,#}
+RECEIVED_REST_JSON=%s received a REST request to the JSON endpoint.
+REQUEST_NEEDS_TESTRUNID=%s: the request did not contain the parameter 'testRunId'. Ignoring.
+RUNNING_TESTS=Running tests
+RUN_TEST_IN_CLOUD_FAILED=Run test in Bitbar Cloud failed
+RUN_TEST_IN_CLOUD_STARTED=Run test in Bitbar Cloud process started...
+RUN_TEST_IN_CLOUD_SUCCEEDED=Run test in Bitbar Cloud succeeded
 SCHEDULER_PARALLEL=Run on all devices simultaneously
 SCHEDULER_SERIAL=Run on one device at a time
 SCHEDULER_SINGLE=Run only on one device from group
-APP_CRAWLER=App Crawler
-PRICE=Price
-TIMEOUT_VALUE=Timeout: {0,number,#}
-RUNNING_TESTS=Running tests
-UPLOADING_NEW_APPLICATION_S=Uploading new application file %s
-UPLOADING_FILE_ERROR=Cannot upload file {0} {1}
-APPLICATION_S_NOT_CHANGED_NOT_UPLOADING=Application file %s does not differ from latest version in Cloud - not uploading
-UPLOADING_NEW_INSTRUMENTATION_S=Uploading new instrumentation file %s
-UPLOADING_DATA_FILE_S=Uploading data file %s
-INSTRUMENTATION_S_NOT_CHANGED_NOT_UPLOADING=Instrumentation file %s does not differ from latest version in Cloud - not uploading
-COLUMN_SUCCESS_RATE = Bitbar Cloud (success rate)
-SUCCESS_RATE = Success rate
-SUCCESS_RATE_TIP = Succeeded and failed tests on devices
-SUCCESS_RATE_PROGRESS_TIP = Test run finished without error on %d'%' of devices
-SUCCESS_RATE_ERROR = Not available
-SUCCESS_RATE_DESCRIPTION = Successful: %d; Failed: %d
-COLUMN_STATUS = Bitbar Cloud (status)
-STATUS = Status
-STATUS_TIP = Current test run status
-STATUS_ERROR = Not available
-COLUMN_PROGRESS = Bitbar Cloud (finished progress)
-PROGRESS = Progress
-PROGRESS_TIP = Percentage of finished devices
-PROGRESS_DESCRIPTION = WAITING: %d / RUNNING: %d / FINISHED: %d / NUMBER OF DEVICES: %d
-PROGRESS_PROGRESS_TIP = %d'%' of devices have finished
-PROGRESS_ERROR = Not available
-ALWAYS=Always
-ON_FAILURE_ONLY=On failure only
-ON_SUCCESS_ONLY=On success only
-RUN_TEST_IN_CLOUD_FAILED=Run test in Bitbar Cloud failed
-RUN_TEST_IN_CLOUD_SUCCEEDED=Run test in Bitbar Cloud succeeded
-RUN_TEST_IN_CLOUD_STARTED=Run test in Bitbar Cloud process started...
-DOWNLOAD_RESULTS_FAILED=A problem occurred downloading results from Cloud
-DOWNLOAD_RESULTS_FAILED_WITH_REASON_S=A problem occurred downloading results from Cloud: %s
-ERROR_DURING_DOWNLOAD_S_FROM_S=Error downloading %s from %s
-NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s. Test was not launched.
-CHECK_FOR_TESTRUN_STATE=Check for testRun({0,number,#}) state.
-API_GET_TESTRUN_ERROR=Error during get testRun({0,number,#}) by api. {1}
-DEVICE_GROUP_INFO=Device Group Name: {0} ID: {1,number,#}
-TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: {0}. Setting 10 minutes.
+SCHEDULER_VALUE=Scheduler: {0}
+STATUS_ERROR=Not available
+STATUS=Status
+STATUS_TIP=Current test run status
+SUCCESS_RATE_DESCRIPTION=Successful: %d; Failed: %d
+SUCCESS_RATE_ERROR=Not available
+SUCCESS_RATE_PROGRESS_TIP=Test run finished without error on %d'%' of devices
+SUCCESS_RATE=Success rate
+SUCCESS_RATE_TIP=Succeeded and failed tests on devices
+TESTDROID_RUN_TESTS_IN_CLOUD=Bitbar: Run tests in Bitbar Cloud
 TEST_RUN_CONFIGURATION=Using test run configuration:
 TEST_RUN_INFO=Started new Bitbar Cloud run at: {0} (ID: {1,number,#})
 TEST_RUN_STATE=TestRun({0,number,#}) state is {1}.
-FREE_USERS_CLOUD_TIMEOUT=User %s is a free user. Forcing timeout from Cloud!
-BUILD_STEP_USING_CREDENTIALS=Using login details from the credentials manager, which overrides basic username/password specified in settings.
-COULDNT_FIND_CREDENTIALS=Couldn't find the credentials '%s'
-CLOUD_URL_SET_BUT_NO_CREDENTIALS=Cloud URL '%s' was specified but no credentials. Using default URL '%s'
-RECEIVED_REST_JSON=%s received a REST request to the JSON endpoint.
-REQUEST_NEEDS_TESTRUNID=%s: the request did not contain the parameter 'testRunId'. Ignoring.
-WAITING_FOR_VIRUS_SCAN=Waiting for uploaded files to be scanned
+TEST_TIMEOUT_NOT_NUMERIC_VALUE=Failed to parse test timeout value: {0}. Setting 10 minutes.
+TIMEOUT_VALUE=Timeout: {0,number,#}
+UNLIMITED=unlimited
+UPLOADING_APPLICATION=Uploading application file
+UPLOADING_DATA_FILE_S=Uploading data file %s
+UPLOADING_FILE_ERROR=Cannot upload file {0} {1}
+UPLOADING_INSTRUMENTATION=Uploading instrumentation file
+UPLOADING_NEW_APPLICATION_S=Uploading new application file %s
+UPLOADING_NEW_INSTRUMENTATION_S=Uploading new instrumentation file %s
+USING_CREDENTIALS_VALUE=Using credentials with ID: {0}
 WAITING_FOR_THE_RESULTS=Waiting for the results...
+WAITING_FOR_VIRUS_SCAN=Waiting for uploaded files to be scanned
 WAITING_SEC_FOR_THE_RESULTS=Waiting({0,number,#} seconds) for results...
