Bring back email/password credentials

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -4,6 +4,7 @@ APP_CRAWLER=App Crawler
 APPLICATION_S_NOT_CHANGED_NOT_UPLOADING=Application file %s does not differ from latest version in Cloud - not uploading
 AUTHORIZATION_OK=Authorization ok.
 BITBAR_API_KEY=BitBar API key
+BITBAR_PASSWORD=BitBar email/password
 BUILD_STEP_USING_CREDENTIALS=Using login details from the credentials manager, which overrides basic username/password specified in settings.
 CHECK_FOR_TESTRUN_STATE=Check for testRun({0,number,#}) state.
 CHECK_PROJECT_NAME=Please check project name
