Add biometric instrumentation handling

--- a/src/main/resources/com/testdroid/jenkins/Messages.properties
+++ b/src/main/resources/com/testdroid/jenkins/Messages.properties
@@ -32,6 +32,8 @@ FRAMEWORK_INFO=Framework ID: {0,number,#}
 FREE_USERS_CLOUD_TIMEOUT=User %s is a free user. Forcing timeout from Cloud!
 INSTRUMENTATION_S_NOT_CHANGED_NOT_UPLOADING=Instrumentation file %s does not differ from latest version in Cloud - not uploading
 LOCALE_VALUE=Locale: {0}
+MALFORMED_URL="Malformed URL"
+NO_SELECTED_CREDENTIALS="No selected credentials"
 NO_RESULT_FROM_DEVICE_TEST_WAS_NOT_LAUNCHED_S=There are no results for device %s. Test was not launched.
 ON_FAILURE_ONLY=On failure only
 ON_SUCCESS_ONLY=On success only
